# customer-agent

./: .env.example  .gitignore  CLAUDE.md  LOGBOOK.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml
extended/: candidates.jsonl  candidates.raw.jsonl  evidence.jsonl  wixqa_extended.jsonl
plans/: OPENSHELL.md  sandbox-smoke-20260722.md
scripts/: build-weaviate-seed  build_extended.py  chat.py  generate_extended.py  index_kb.py  run-agent  run_eval.py  search.py  upload_extended.py  vet_extended.py
scripts/run-agent-payload/: entrypoint.sh  policy.template.yaml  task.md.template
scripts/run-agent-payload/llm-budget/: proxy.py
src/customer_agent/: config.py  pricing.py  tracing.py
src/customer_agent/agent/: agent.py  prompts.py  tools.py
src/customer_agent/data/: splits.py  wixqa.py
src/customer_agent/evaluation/: answer_metrics.py  retrieval_metrics.py  runner.py  scope_metrics.py  scoring.py  user_simulator.py
src/customer_agent/indexing/: chunking.py  indexer.py
src/customer_agent/retrieval/: embeddings.py  pipeline.py  reranker.py  retriever.py
tests/: conftest.py  test_chunking.py  test_config.py  test_pipeline.py  test_pricing.py  test_recorder.py  test_retrieval_metrics.py  test_runner.py  test_scoring.py  test_splits.py  test_tools.py  test_user_simulator.py
