[project]
name = "customer-agent"
version = "0.1.0"
description = "Customer support agent engine — RAG experimentation platform on WixQA"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.60",
    "openai-agents>=0.1",
    "weaviate-client>=4.10",
    "datasets>=3.2",
    "huggingface-hub>=0.27",
    "deepeval>=2.4",
    "anthropic>=0.45",
    "arize-phoenix-otel>=0.7",
    "openinference-instrumentation-openai>=0.1.18",
    "openinference-instrumentation-openai-agents>=0.1",
    "pydantic-settings>=2.7",
    "tiktoken>=0.8",
    "rich>=13",
    "voyageai>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/customer_agent"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
